--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sequel-react-quickstart",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://introvoke.github.io/sequel-react-quickstart/",
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
